--- a/src/app/check/check.component.html
+++ b/src/app/check/check.component.html
@@ -1,27 +1,27 @@
-<p>check works!</p>
+<p>Event Page!</p>
 <style>
   
     .container
     {
-      border:2px solid black;
+      border:15px solid black;
       text-align: center;
-      background-color: antiquewhite;
+      background-color: rgb(129, 77, 8);
       
     }
     .table
     {
-      border:2px solid red;
+      border:15px solid rgb(185, 9, 118);
        text-align: center;
-       margin-left: 40%;
-       margin-top: 2%;
+       margin-left: 45%;
+       margin-top: 3%;
     }
     th
     {
-      border: 1px solid blue
+      border: 1px solid rgb(135, 173, 223)
     }
     td
     {
-      border:5px solid green
+      border:5px solid rgb(203, 230, 85)
     }
   </style>
   
@@ -31,8 +31,8 @@
       <table class="table">
         <thead>
           <tr>
-            <th>EmployeeID</th>
-            <th>EmployeePosition</th>
+            <th>Employee_ID</th>
+            <th>Employee_Position</th>
             <th>Actions</th>
           </tr>
         </thead>
